<?xml version="1.0" encoding="utf-8"?>
<!-- res/menu/menu_export.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_download_24"
        android:title="@string/menu_export"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear_filters"
        android:icon="@drawable/ic_clear_24"
        android:title="@string/export_clear_filters"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_all"
        android:title="@string/export_filter_all_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_meter_check"
        android:title="@string/export_filter_meter_check"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_meter_match"
        android:title="@string/export_filter_meter_match"
        app:showAsAction="never" />

</menu>