<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment"
    app:enterAnim="@anim/fade_in"
    app:exitAnim="@anim/fade_out"
    app:popEnterAnim="@anim/fade_in"
    app:popExitAnim="@anim/fade_out">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.microqr.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.microqr.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_matchFragment"
            app:destination="@id/navigation_match"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_homeFragment_to_meterCheckFragment"
            app:destination="@id/navigation_metercheck"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_homeFragment_to_fileUploadFragment"
            app:destination="@id/navigation_files"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_homeFragment_to_exportFragment"
            app:destination="@id/navigation_export"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <!-- ✅ FIXED: MeterCheck fragment with correct navigation action -->
    <fragment
        android:id="@+id/navigation_metercheck"
        android:name="com.example.microqr.ui.metercheck.MeterCheckFragment"
        android:label="@string/title_metercheck"
        tools:layout="@layout/fragment_meter_check">
        <!-- ✅ CORRECT: Action from MeterCheck to Reader -->
        <action
            android:id="@+id/action_meterCheck_to_reader"
            app:destination="@id/readerFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_meterCheck_to_location"
            app:destination="@id/locationFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/locationFragment"
        android:name="com.example.microqr.ui.location.LocationFragment"
        android:label="@string/location_fragment_title"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_files"
        android:name="com.example.microqr.ui.files.FilesFragment"
        android:label="@string/title_upload"
        tools:layout="@layout/fragment_files" />

    <fragment
        android:id="@+id/readerFragment"
        android:name="com.example.microqr.ui.reader.ReaderFragment"
        android:label="@string/title_reader"
        tools:layout="@layout/fragment_reader">
        <action
            android:id="@+id/action_ReaderFragment_to_DetectedFragment"
            app:destination="@id/detectedFragment"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/slide_out_down"
            app:popEnterAnim="@anim/slide_in_down"
            app:popExitAnim="@anim/slide_out_up" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.microqr.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_match"
        android:name="com.example.microqr.ui.metermatch.MeterMatchFragment"
        android:label="@string/title_match">
        <action
            android:id="@+id/action_matchFragment_to_meterDetailScanFragment"
            app:destination="@id/meterDetailScanFragment"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/slide_out_down"
            app:popEnterAnim="@anim/slide_in_down"
            app:popExitAnim="@anim/slide_out_up" />
        <action
            android:id="@+id/action_matchFragment_to_continuousReadingFragment"
            app:destination="@id/continuousReadingFragment"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/slide_out_down"
            app:popEnterAnim="@anim/slide_in_down"
            app:popExitAnim="@anim/slide_out_up" />
    </fragment>

    <fragment
        android:id="@+id/detectedFragment"
        android:name="com.example.microqr.ui.reader.DetectedFragment"
        android:label="@string/detection_completed"
        tools:layout="@layout/fragment_detected">
        <action
            android:id="@+id/action_detectedFragment_to_meterCheckFragment"
            app:destination="@id/navigation_metercheck"
            app:popUpTo="@id/navigation_metercheck"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/slide_out_down"
            app:popEnterAnim="@anim/slide_in_down"
            app:popExitAnim="@anim/slide_out_up" />
        <action
            android:id="@+id/action_detectedFragment_to_meterDataInputFragment"
            app:destination="@id/meterDataInputFragment"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/slide_out_down"
            app:popEnterAnim="@anim/slide_in_down"
            app:popExitAnim="@anim/slide_out_up" />
        <action
            android:id="@+id/action_detectedFragment_to_locationFragment"
            app:destination="@id/locationFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/meterDataInputFragment"
        android:name="com.example.microqr.ui.reader.MeterDataInputFragment"
        android:label="@string/set_meter_data"
        tools:layout="@layout/fragment_meter_data_input">
        <action
            android:id="@+id/action_meterDataInputFragment_to_detectedFragment"
            app:destination="@id/detectedFragment"
            app:popUpTo="@id/detectedFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_down"
            app:exitAnim="@anim/slide_out_up"
            app:popEnterAnim="@anim/slide_in_up"
            app:popExitAnim="@anim/slide_out_down" />
        <action
            android:id="@+id/action_meterDataInputFragment_to_locationFragment"
            app:destination="@id/locationFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/meterDetailScanFragment"
        android:name="com.example.microqr.ui.metermatch.MeterDetailScanFragment"
        android:label="@string/scan_qr_code"
        tools:layout="@layout/fragment_meter_detail_scan" />

    <fragment
        android:id="@+id/continuousReadingFragment"
        android:name="com.example.microqr.ui.metermatch.ContinuousReadingFragment"
        android:label="@string/continuous_reading_title"
        tools:layout="@layout/fragment_continuous_reading" />

    <fragment
        android:id="@+id/navigation_export"
        android:name="com.example.microqr.ui.export.ExportFragment"
        android:label="@string/title_export"
        tools:layout="@layout/fragment_export" />

</navigation>